# openvino_pedestrian_tracker

./: .gitignore  CMakeLists.txt  EnvVarsAndPathToSet.txt  README.md  main.cpp
common/monitors/: cpu_monitor.cpp  memory_monitor.cpp
models/person-detection-retail-0013/FP16-INT8/: person-detection-retail-0013.xml
models/person-detection-retail-0013/FP32/: person-detection-retail-0013.xml
models/person-reidentification-retail-0031/FP16/: person-reidentification-retail-0031.xml
models/person-reidentification-retail-0031/FP16-INT8/: person-reidentification-retail-0031.xml
models/person-reidentification-retail-0031/FP32/: person-reidentification-retail-0031.xml
